Going back to flex-start until I come up with a better solution for the spacing issue

--- a/src/styles/SnackGrid.module.css
+++ b/src/styles/SnackGrid.module.css
@@ -2,5 +2,5 @@
   width: 100%;
   margin: 0;
   padding-top: 30px;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
